tests/ui/feature-gates/feature-gate-doc_notable_trait.stderr
error[E0658]: `#[doc(notable_trait)]` is experimental
  --> $DIR/feature-gate-doc_notable_trait.rs:1:1
   |
LL | #[doc(notable_trait)]
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #45040 <https://github.com/rust-lang/rust/issues/45040> for more information
   = help: add `#![feature(doc_notable_trait)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
