tests/ui/feature-gates/feature-gate-doc_notable_trait.rs
#[doc(notable_trait)] //~ ERROR: `#[doc(notable_trait)]` is experimental
trait SomeTrait {}

fn main() {}
